--- a/projekte/index.html
+++ b/projekte/index.html
@@ -4,5 +4,14 @@ title: Projekte
 description: ''
 ---
 
-Ich bin eine Banane!
+<h3>Projekte</h3>
 
+<ul>
+  {% for project in site.projects %}
+    <li>
+      <a href="{{ site.baseurl }}{{ project.url|replace_first:'/','' }}">
+        {{ project.title }}
+      </a>
+    </li>
+  {% endfor %}
+</ul>
