Some more styling

--- a/index.html
+++ b/index.html
@@ -5,5 +5,31 @@ description: ''
 home: true
 ---
 
-Ich bin eine Banane! 
+<div class='home-demo'>
+    <div class="claim">
+        Mit offenem Wissen die digitale Gesellschaft gestalten.
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <span class="kpi">13 OKLabs</span>
+            <span class="detail">
+                entwickeln Tools für <a href="#">digitale Städte</a> in ganz Deutschland.
+            </span>
+        </div>
+        <div class="col-md-4">
+            <span class="kpi">120 Jugend-Hacker</span>
+            <span class="detail">
+                experimentieren bei <a href="#">Jugend Hackt</a> mit Code und Freundschaft.
+            </span>
+        </div>
+        <div class="col-md-4">
+            <span class="kpi">3954 Anfragen</span>
+            <span class="detail">
+                nach amtlichen Informationen und Daten auf <a href="#">FragDenStaat.de</a>
+            </span>
+        </div>
+        
+    </div>
+</div>
 
