Update claim on website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ home: true
 
 <div class='home-demo'>
     <div class="claim">
-        Mit offenem Wissen die digitale Gesellschaft gestalten.
+        <h1>Wir gestalten die digitale Gesellschaft<br/>mit offenem Wissen und Werkzeugen.</h1>
     </div>
 
     <div class="row">
@@ -29,7 +29,6 @@ home: true
                 nach amtlichen Informationen und Daten auf <a href="#">FragDenStaat.de</a>
             </span>
         </div>
-        
+
     </div>
 </div>
-
