--- a/themen/index.html
+++ b/themen/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: base
 title: Themen
 menu_themen: yes
 
@@ -7,7 +7,7 @@ menu_themen: yes
 
 {% assign themen = site.pages|where:"layout","thema"|sort:"title" %}
 
-<div class="theme-header">
+<div class="broad-header">
   <h1>Themen</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis in facilis eaque soluta, tempora. Quaerat deserunt, eius et pariatur asperiores placeat alias quis saepe, consectetur cumque ea sunt necessitatibus hic!</p>
   <ul class="nav-list">
