Add to layout, change styles

--- a/index.html
+++ b/index.html
@@ -5,30 +5,28 @@ description: ''
 home: true
 ---
 
-<div class='home-demo'>
-    <div class="claim">
-        <h1>Wir gestalten die digitale Gesellschaft<br/>mit offenem Wissen und Werkzeugen.</h1>
+<div class="top-box col-center">
+  <h1>Wir gestalten die digitale Gesellschaft<br/>mit offenem Wissen und Werkzeugen.</h1>
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <span class="kpi">13 OKLabs</span>
+        <span class="detail">
+            entwickeln Tools für <a href="#">digitale Städte</a> in ganz Deutschland.
+        </span>
+    </div>
+    <div class="col-md-4">
+        <span class="kpi">120 Jugend-Hacker</span>
+        <span class="detail">
+            experimentieren bei <a href="#">Jugend Hackt</a> mit Code und Freundschaft.
+        </span>
+    </div>
+    <div class="col-md-4">
+        <span class="kpi">3954 Anfragen</span>
+        <span class="detail">
+            nach amtlichen Informationen und Daten auf <a href="#">FragDenStaat.de</a>
+        </span>
     </div>
 
-    <div class="row">
-        <div class="col-md-4">
-            <span class="kpi">13 OKLabs</span>
-            <span class="detail">
-                entwickeln Tools für <a href="#">digitale Städte</a> in ganz Deutschland.
-            </span>
-        </div>
-        <div class="col-md-4">
-            <span class="kpi">120 Jugend-Hacker</span>
-            <span class="detail">
-                experimentieren bei <a href="#">Jugend Hackt</a> mit Code und Freundschaft.
-            </span>
-        </div>
-        <div class="col-md-4">
-            <span class="kpi">3954 Anfragen</span>
-            <span class="detail">
-                nach amtlichen Informationen und Daten auf <a href="#">FragDenStaat.de</a>
-            </span>
-        </div>
-
-    </div>
 </div>
