--- a/projekte/index.html
+++ b/projekte/index.html
@@ -12,20 +12,39 @@ menu_projekte: yes
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 </div>
 
+<div class="row">
 {% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
-{% include project_list.html projects=projects colsize=6 %}
+{% for project in projects %}
+  {% include project_list.html project=project %}
+{% endfor %}
 
 {% assign projects = site.projects | where: "type", "tool" %}
-{% include project_list.html projects=projects colsize=4 %}
+{% for project in projects %}
+  {% include project_list.html project=project %}
+{% endfor %}
+</div>
 
 <h3>Events</h3>
-{% assign projects = site.projects | where: "type", "event" %}
-{% include project_list.html projects=projects colsize=4 %}
+<div class="row">
+{% assign projects = site.projects | where: "type","event" | sort:"date","last" %}
+{% for project in projects reversed %}
+  {% include project_list.html project=project %}
+{% endfor %}
+
+</div>
 
 <h3>Forschungsprojekte</h3>
+<div class="row">
 {% assign projects = site.projects | where: "type", "research" %}
-{% include project_list.html projects=projects colsize=4 %}
+{% for project in projects %}
+  {% include project_list.html project=project %}
+{% endfor %}
+</div>
 
-<h4>Archiv</h4>
+<h3>Archiv</h3>
+<div class="row">
 {% assign projects = site.projects | where: "type", "archive" %}
-{% include project_list.html projects=projects colsize=3 %}
+{% for project in projects %}
+  {% include project_list.html project=project %}
+{% endfor %}
+</div>
