Hide sub nav in themen for now

--- a/themen/index.html
+++ b/themen/index.html
@@ -10,7 +10,7 @@ menu_themen: yes
 <div class="broad-header">
   <h1>Themen</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis in facilis eaque soluta, tempora. Quaerat deserunt, eius et pariatur asperiores placeat alias quis saepe, consectetur cumque ea sunt necessitatibus hic!</p>
-  <ul class="nav-list">
+  <!-- <ul class="nav-list">
     {% for thema in themen %}
       <li>
         <a href="{{ site.baseurl }}{{ thema.url|replace_first:'/',''|replace_first:'index.html','' }}">
@@ -18,7 +18,7 @@ menu_themen: yes
         </a>
       </li>
     {% endfor %}
-  </ul>
+  </ul> -->
 </div>
 
 {% for thema in themen %}
