Add more background images

--- a/projekte/index.html
+++ b/projekte/index.html
@@ -2,8 +2,10 @@
 layout: default
 title: Projekte
 description: ''
-whitelogo: yes
+blacknav: yes
+blacklogo: yes
 menu_projekte: yes
+background: backgrounds/projekte.jpg
 
 ---
 
