--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ home: true
     <div class="col-md-4">
         <span class="kpi">120 Jugend-Hacker</span>
         <span class="detail">
-            experimentieren bei <a href="#">Jugend Hackt</a> mit Code und Freundschaft.
+            experimentieren bei <a href="#">Jugend hackt</a> mit Code und Freundschaft.
         </span>
     </div>
     <div class="col-md-4">
