--- a/themen/index.html
+++ b/themen/index.html
@@ -9,7 +9,7 @@ menu_themen: yes
 
 <div class="broad-header">
   <h1>Themen</h1>
-  <p>Der Open Knowledge Foundation Deutschland e.V. versteht sich als aktiver Teil der deutschen und europäischen Zivilgesellschaft. Wir fördern und stärken die Bürgerrechte, wie sie im Grundgesetz und in der Europäischen Menschenrechtskonvention verankert sind. Wir setzen uns dabei insbesondere für folgende Themen der digitalen Gesellschaft ein:/p>
+  <p>Der Open Knowledge Foundation Deutschland e.V. versteht sich als aktiver Teil der deutschen und europäischen Zivilgesellschaft. Wir fördern und stärken die Bürgerrechte, wie sie im Grundgesetz und in der Europäischen Menschenrechtskonvention verankert sind. Wir setzen uns dabei insbesondere für folgende Themen der digitalen Gesellschaft ein:</p>
   <!-- <ul class="nav-list">
     {% for thema in themen %}
       <li>
