Add community background

--- a/community/index.html
+++ b/community/index.html
@@ -2,7 +2,9 @@
 layout: base
 title: Community
 description: ''
-background: backgrounds/background.jpg
+background: backgrounds/community.jpg
+blacknav: yes
+blacklogo: yes
 menu_community: yes
 
 ---
