--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ home: true
       </p>
       <ul class="nav-list">
         <li>
-          <a href="">Spenden</a>
+          <a href="">Find ich gut. Da will ich spenden.</a>
         </li>
         <li>
-          <a href="">Spenden</a>
+          <a href="">Halt. Stop. Erstmal mehr erfahren.</a>
         </li>
       </ul>
     </div>
