Put up claim on project page

--- a/projekte/index.html
+++ b/projekte/index.html
@@ -11,7 +11,7 @@ background: backgrounds/projekte.jpg
 
 <div class="top-box col-md-7 col-center text-center">
   <h2>Projekte</h2>
-  <p>Unsere Projekte</p>
+  <p>Wir bauen zusammen digitale Werkzeuge und betreiben Infrastruktur für unsere Demokratie im Web.</p>
 </div>
 
 <div class="row">
