--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@ home: true
       </p>
     </div>
     <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 ">
+      <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="FragDenStaat" class="img-circle"/>
+      <h4 class="kpi">
+        325,000<br/>
+        Kulturdaten
+      </h4>
+      <p class="detail">
+          wurden bei<a href="{{ site.baseurl }}projekte/codingdavinci/">Coding da Vinci</a>für alle zugänglich und nutzbar gemacht.
+      </p>
+    </div>
+    <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 ">
       <img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/>
       <h4 class="kpi">
         120<br/>
