--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ home: true
       </p>
     </div>
     <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 ">
-      <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="FragDenStaat" class="img-circle"/>
+      <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/>
       <h4 class="kpi">
         325,000<br/>
         Kulturdaten
