Fix lots of little things, refactor css

--- a/index.html
+++ b/index.html
@@ -9,45 +9,53 @@ home: true
 <div class="container">
 
   <div class="row padded-row">
-    <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-15">
-      <img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/>
-      <h4 class="kpi">
-        13<br/>
-        OK Labs
-      </h4>
-      <p class="detail">
-          entwickeln Tools für <a href="{{ site.baseurl }}projekte/codeforde/">digitale Städte</a> in ganz Deutschland.
-      </p>
+    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+      <div class="showcase">
+        <img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/>
+        <h4 class="kpi">
+          13<br/>
+          OK Labs
+        </h4>
+        <p class="detail">
+            entwickeln Tools für <a href="{{ site.baseurl }}projekte/codeforde/">digitale Städte</a> in ganz Deutschland.
+        </p>
+      </div>
     </div>
-    <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 ">
-      <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/>
-      <h4 class="kpi">
-        325,000<br/>
-        Kulturdaten
-      </h4>
-      <p class="detail">
-          wurden bei <a href="{{ site.baseurl }}projekte/codingdavinci/">Coding da Vinci</a> für alle zugänglich und nutzbar gemacht.
-      </p>
+    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+      <div class="showcase">
+        <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/>
+        <h4 class="kpi">
+          325,000<br/>
+          Kulturdaten
+        </h4>
+        <p class="detail">
+            wurden bei <a href="{{ site.baseurl }}projekte/codingdavinci/">Coding da Vinci</a> für alle zugänglich und nutzbar gemacht.
+        </p>
+      </div>
     </div>
-    <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 ">
-      <img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/>
-      <h4 class="kpi">
-        120<br/>
-        Jugend-Hacker
-      </h4>
-      <p class="detail">
-          experimentieren bei <a href="{{ site.baseurl }}projekte/jugendhackt/">Jugend hackt</a> mit Code und Freundschaft.
-      </p>
+    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+      <div class="showcase">
+        <img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/>
+        <h4 class="kpi">
+          120<br/>
+          Jugend-Hacker
+        </h4>
+        <p class="detail">
+            experimentieren bei <a href="{{ site.baseurl }}projekte/jugendhackt/">Jugend hackt</a> mit Code und Freundschaft.
+        </p>
+      </div>
     </div>
-    <div class="showcase col-xs-8 col-xs-offset-2 col-sm-3 ">
-      <img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="FragDenStaat" class="img-circle"/>
-      <h4 class="kpi">
-        3954<br/>
-        Anfragen
-      </h4>
-      <p class="detail">
-          nach amtlichen Informationen und Daten auf <a href="{{ site.baseurl }}projekte/fragdenstaat/">FragDenStaat.de</a>
-      </p>
+    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+      <div class="showcase">
+        <img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="Jugend Hackt" class="img-circle"/>
+        <h4 class="kpi">
+          4000+<br/>
+          Anfragen
+        </h4>
+        <p class="detail">
+            wurden bei <a href="{{ site.baseurl }}projekte/fragdenstaat/">FragDenStaat.de</a> von Bürgen an Behörden gestellt.
+        </p>
+      </div>
     </div>
   </div>
 </div>
@@ -62,10 +70,10 @@ home: true
       </p>
       <ul class="nav-list">
         <li>
-          <a href="">Find ich gut. Da will ich spenden.</a>
+          <a href="{{ site.baseurl }}spenden/">Find ich gut. Da will ich spenden.</a>
         </li>
         <li>
-          <a href="">Halt. Stop. Erstmal mehr erfahren.</a>
+          <a href="{{ site.baseurl }}spenden/">Stop. Erstmal mehr erfahren.</a>
         </li>
       </ul>
     </div>
@@ -86,22 +94,24 @@ home: true
 <div class="dark-section darker-color">
   <div class="container">
     <div class="col-center padded-row">
-    <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank" role="form">
-      <div class="row">
-        <h2>Newsletter</h2>
-        <div class="col-lg-10 col-lg-offset-1">
-          <p> Du möchtest auf dem Laufenden bleiben über Code for Germany? <br> Dann trag Dich in unseren monatlichen Newsletter ein: </p>
-        </div>
-        <div class="mc-field-group form-group form-group-newsletter text-left">
+      <h2>Newsletter</h2>
+      <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank" role="form">
+        <p>
+          Du möchtest über die Open Knowledge Foundation auf dem Laufenden bleiben?
+          <br>
+          Dann trag Dich in unseren monatlichen Newsletter ein:
+        </p>
+        <div class="row">
           <div class="col-lg-5 col-lg-offset-2">
             <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
-            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required ></div>
-            <div class="col-lg-3">
-              <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">Abonnieren!</button>
-              <div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_bb63fcab72" value="">
-                <!-- set to newsletter only-->
-                <input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
-              </div>
+            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >
+          </div>
+          <div class="col-lg-3">
+            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">Abonnieren!</button>
+            <div style="position: absolute; left: -5000px;">
+              <input type="text" name="b_929f1e07936386d34833e20d1_bb63fcab72" value="">
+              <!-- set to newsletter only-->
+              <input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
             </div>
           </div>
         </div>
@@ -112,6 +122,7 @@ home: true
 
 <div class="full-box">
   <div class="container">
+    <h3 class="subtle-section">Neueste Blog-Einträge</h3>
     {% for post in site.posts limit:3 %}
       {% include post_preview.html post=post %}
     {% endfor %}
