--- a/team/index.html
+++ b/team/index.html
@@ -7,10 +7,10 @@ menu_community: yes
 
 ---
 
-<div class="broad-header">
+<div class="lurking-header">
   <h1>Team</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, id provident omnis laudantium delectus excepturi quae eum ad? A fuga in dolores facilis nobis vitae incidunt. Ipsa delectus maxime magni!</p>
-</div>
+<!--   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, id provident omnis laudantium delectus excepturi quae eum ad? A fuga in dolores facilis nobis vitae incidunt. Ipsa delectus maxime magni!</p>
+ --></div>
 
 <div class="container">
 
