--- a/themen/index.html
+++ b/themen/index.html
@@ -7,7 +7,7 @@ menu_themen: yes
 
 {% assign themen = site.pages|where:"layout","thema"|sort:"title" %}
 
-<div class="top-box col-center">
+<div class="lurking-header">
   <h1>Themen</h1>
   <p>Der Open Knowledge Foundation Deutschland e.V. versteht sich als aktiver Teil der deutschen und europäischen Zivilgesellschaft. Wir fördern und stärken die Bürgerrechte, wie sie im Grundgesetz und in der Europäischen Menschenrechtskonvention verankert sind. Wir setzen uns dabei insbesondere für folgende Themen der digitalen Gesellschaft ein:</p>
   <!-- <ul class="nav-list">
