--- a/vorstand/index.html
+++ b/vorstand/index.html
@@ -7,7 +7,7 @@ menu_community: yes
 
 ---
 
-<div class="broad-header">
+<div class="lurking-header">
   <h1>Vorstand</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, id provident omnis laudantium delectus excepturi quae eum ad? A fuga in dolores facilis nobis vitae incidunt. Ipsa delectus maxime magni!</p>
 </div>
