--- a/community/index.html
+++ b/community/index.html
@@ -9,7 +9,7 @@ menu_community: yes
 
 ---
 
-<div class="top-box col-center">
+<div class="lurking-header">
   <h1>Community</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, id provident omnis laudantium delectus excepturi quae eum ad? A fuga in dolores facilis nobis vitae incidunt. Ipsa delectus maxime magni!</p>
   <ul class="nav-list">
