--- a/projekte/index.html
+++ b/projekte/index.html
@@ -3,13 +3,12 @@ layout: default
 title: Projekte
 description: ''
 blacknav: yes
-blacklogo: yes
 menu_projekte: yes
 background: backgrounds/projekte.jpg
 
 ---
 
-<div class="top-box col-md-7 col-center text-center">
+<div class="lurking-header">
   <h2>Projekte</h2>
   <p>Wir bauen zusammen digitale Werkzeuge und betreiben Infrastruktur für unsere Demokratie im Web.</p>
 </div>
@@ -26,7 +25,7 @@ background: backgrounds/projekte.jpg
 {% endfor %}
 </div>
 
-<h3 class="project-section">Events</h3>
+<h3 class="subtle-section">Events</h3>
 <div class="row">
 {% assign projects = site.projects | where: "type","event" | sort:"date","last" %}
 {% for project in projects reversed %}
@@ -35,7 +34,7 @@ background: backgrounds/projekte.jpg
 
 </div>
 
-<h3 class="project-section">Forschungsprojekte</h3>
+<h3 class="subtle-section">Forschungsprojekte</h3>
 <div class="row">
 {% assign projects = site.projects | where: "type", "research" %}
 {% for project in projects %}
@@ -43,7 +42,7 @@ background: backgrounds/projekte.jpg
 {% endfor %}
 </div>
 
-<h3 class="project-section">Archiv</h3>
+<h3 class="subtle-section">Archiv</h3>
 <div class="row">
 {% assign projects = site.projects | where: "type", "archive"  | sort:"featured","last" %}
 {% for project in projects %}
