Add improved claim on project page

--- a/projekte/index.html
+++ b/projekte/index.html
@@ -10,7 +10,11 @@ background: backgrounds/projekte.jpg
 
 <div class="lurking-header">
   <h2>Projekte</h2>
-  <p>Wir bauen zusammen digitale Werkzeuge und betreiben Infrastruktur für unsere Demokratie im Web.</p>
+  <p>
+    Wir bringen Menschen zusammen, die digitale Bürger-Werkzeuge bauen, und
+    wir betreiben offene Web-Infrastruktur für unsere Demokratie.<br/>
+    Das sind unsere Projekte:
+  </p>
 </div>
 
 <div class="row">
