Better distribution of project on front page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ home: true
 <div class="container">
 
   <div class="row padded-row">
-    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
         <img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/>
         <h4 class="kpi">
@@ -21,7 +21,7 @@ home: true
         </p>
       </div>
     </div>
-    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
         <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/>
         <h4 class="kpi">
@@ -33,7 +33,7 @@ home: true
         </p>
       </div>
     </div>
-    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
         <img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/>
         <h4 class="kpi">
@@ -45,7 +45,7 @@ home: true
         </p>
       </div>
     </div>
-    <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
+    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
         <img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="Jugend Hackt" class="img-circle"/>
         <h4 class="kpi">
