Link auf die Mission-Seite

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ home: true
           <a href="{{ site.baseurl }}spenden/">Find ich gut. Da will ich spenden.</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}spenden/">Stop. Erstmal mehr erfahren.</a>
+          <a href="{{ site.baseurl }}mission/">Stop. Erstmal mehr erfahren.</a>
         </li>
       </ul>
     </div>
