--- a/services/index.html
+++ b/services/index.html
@@ -8,4 +8,20 @@ background: backgrounds/services.jpg
 
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis in facilis eaque soluta, tempora. Quaerat deserunt, eius et pariatur asperiores placeat alias quis saepe, consectetur cumque ea sunt necessitatibus hic!
+Durch die ständig wachsende Zahl von Daten gibt es einen immer größeren Bedarf an Dienstleistungen. Dieser Bedarf besteht bei Unternehmen und Verwaltungen ebenso so wie in Redaktionen oder bei zivilgesellschaftlichen Organisationen.
+
+Die Open Knowledge Foundation Deutschland arbeitet gemeinsam mit Experten an der Öffnung von Daten und Wissen sowie der Analyse und der Aufbereitung offener Inhalte. Die OKF fungiert dabei als einer der größten zivilgesellschaftlichen Ansprechpartner bei den Themen offenes Wissen und offene Daten in Deutschland.
+
+In Zusammenarbeit mit anderen Organisationen bieten wir in diesem Zusammenhang auch Dienstleistungen rund um die Öffnung von Daten und Wissen an.
+
+Aktuell unterstützen wir Sie mit drei Kursen:
+
+* Kompakte Einführung ins Thema (1/2 Tag)
+* Kurs für Führungskräfte, Entscheidungsträger (1 Tag)
+* Offene Daten für Journalisten (2-3 Tage)
+
+Diese Angebote werden ständig mit mehreren Partnern (u.a. für öffentliche Verwaltungen) weiterentwickelt. Wir leisten damit einen Beitrag zur Digitalen Agenda und dem deutschen Aktionsplans für die Open-Data-Charta.
+
+Bitte setzen Sie sich mit uns in Verbindung, wenn Sie Fragen zu diesen Kursen haben oder mit uns über ein speziell für Sie entwickeltes Weiterbildungsprogramm sprechen möchten – etwa wenn wir Sie bei einem redaktionellen Projekt begleiten sollen oder Sie als Kommune oder Unternehmen strategische Unterstützung benötigen: Wir unterstützen Sie dabei, ein Konzept für für offene Daten und Transparenz zu entwickeln.
+
+Projektleiter: [Michael Hörz](mailto:michael.hoerz@okfn.de)
