Add some text to the board page

--- a/vorstand/index.html
+++ b/vorstand/index.html
@@ -9,7 +9,11 @@ menu_community: yes
 
 <div class="lurking-header">
   <h1>Vorstand</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, id provident omnis laudantium delectus excepturi quae eum ad? A fuga in dolores facilis nobis vitae incidunt. Ipsa delectus maxime magni!</p>
+  <p>
+    Der Vorstand des Open Knowledge Foundation Deutschland e.V.
+    besteht aus neun Mitgliedern.
+    Sie entscheiden über die strategische Ausrichtung des Vereins.
+  </p>
 </div>
 
 <div class="container">
