--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ home: true
   <div class="row padded-row">
     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
-        <img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/>
+        <a href="{{ site.baseurl }}projekte/codeforde/"><img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/></a>
         <h4 class="kpi">
           20<br/>
           OK Labs
@@ -23,7 +23,7 @@ home: true
     </div>
     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
-        <img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/>
+        <a href="{{ site.baseurl }}projekte/codingdavinci/"><img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/></a>
         <h4 class="kpi">
           325,000<br/>
           Kulturdaten
@@ -35,7 +35,7 @@ home: true
     </div>
     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
-        <img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/>
+        <a href="{{ site.baseurl }}projekte/jugendhackt/"><img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
         <h4 class="kpi">
           120<br/>
           Jugend-Hacker
@@ -47,7 +47,7 @@ home: true
     </div>
     <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
       <div class="showcase">
-        <img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="Jugend Hackt" class="img-circle"/>
+        <a href="{{ site.baseurl }}projekte/fragdenstaat/"><img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
         <h4 class="kpi">
           5500+<br/>
           Anfragen
