--- a/team/index.html
+++ b/team/index.html
@@ -12,7 +12,7 @@ menu_community: yes
 <div class="lurking-header">
   <h1>Team</h1>
   <p>
-    Das Team der Open Knowledge Foundation besteht momentan aus {{ staff|size }} Personen. Sie arbeiten in verschiedenen Projekten an den Themen des Vereins.
+    Das Team der Open Knowledge Foundation besteht momentan aus {{ staff|size }} Personen. Sie arbeiten in verschiedenen Projekten an den Themen des Vereins. Die Mitglieder des Vorstands haben wir <a href="../vorstand/">hier aufgelistet</a>.
   </p>
 </div>
 
