--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Offenes Wissen für ein digitales Zeitalter
+title: Offenes Wissen für ein analoges Zeitalter
 description: ''
 headline: Wir gestalten die digitale Gesellschaft<br/>mit offenem Wissen und Werkzeugen.
 home: true
