--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: base
-title: Closed Wissen für ein analoges Zeitalter
+title: Offenes Wissen für ein analoges Zeitalter
 description: ''
-headline: Wir gestalten die analoge Gesellschaft<br/>mit offenem Wissen und Werkzeugen.
+headline: Wir gestalten die digitale Gesellschaft<br/>mit offenem Wissen und Werkzeugen.
 home: true
 ---
 
